[gd_scene load_steps=7 format=3 uid="uid://chfkxipp0hb60"]

[ext_resource type="Script" path="res://diadem/items/passwords.gd" id="1_cfypp"]
[ext_resource type="Texture2D" uid="uid://cwlk7c20mxo6o" path="res://diadem/diadem-png/passwords.png" id="1_hv51l"]
[ext_resource type="Texture2D" uid="uid://fk622xrb3gch" path="res://diadem/diadem-png/exit_btn.png" id="2_0toau"]
[ext_resource type="Texture2D" uid="uid://jp3m14mxvr85" path="res://diadem/diadem-png/blackrec.png" id="2_3ny2t"]
[ext_resource type="Texture2D" uid="uid://ct462rmgqydcv" path="res://diadem/diadem-png/exit_btn_pressed.png" id="3_g0bt6"]
[ext_resource type="PackedScene" uid="uid://ciqahgy3jjlsj" path="res://diadem/items/zodiac.tscn" id="5_rcgbg"]

[node name="passwords" type="CanvasLayer"]
script = ExtResource("1_cfypp")

[node name="Blackrec" type="Sprite2D" parent="."]
position = Vector2(1111.5, 510.5)
scale = Vector2(0.736894, 0.784497)
texture = ExtResource("2_3ny2t")

[node name="TextureButton" type="TextureButton" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -140.0
offset_top = 67.0
offset_right = 165.0
offset_bottom = 371.0
grow_horizontal = 0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("2_0toau")
texture_pressed = ExtResource("3_g0bt6")
stretch_mode = 0

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -121.0
offset_top = 41.0
offset_right = 124.0
offset_bottom = 154.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.568627, 0, 0, 1)
theme_override_font_sizes/font_size = 80

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.744
anchor_right = 0.5
anchor_bottom = 0.744
offset_left = -82.0
offset_top = -423.112
offset_right = 72.0
offset_bottom = -351.112
grow_horizontal = 2
grow_vertical = 2

[node name="Passwords" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(73.9999, 311)
scale = Vector2(0.225166, 0.225166)
texture = ExtResource("1_hv51l")

[node name="zodiac" type="Node2D" parent="VBoxContainer/Passwords"]
position = Vector2(-2509.27, -1541.09)
scale = Vector2(4.44118, 4.44118)

[node name="Zodiac" parent="VBoxContainer/Passwords/zodiac" instance=ExtResource("5_rcgbg")]
position = Vector2(281, 348)

[node name="Zodiac2" parent="VBoxContainer/Passwords/zodiac" instance=ExtResource("5_rcgbg")]
position = Vector2(423, 349)

[node name="Zodiac3" parent="VBoxContainer/Passwords/zodiac" instance=ExtResource("5_rcgbg")]
position = Vector2(562, 352)

[node name="Zodiac4" parent="VBoxContainer/Passwords/zodiac" instance=ExtResource("5_rcgbg")]
position = Vector2(702, 352)

[node name="Zodiac5" parent="VBoxContainer/Passwords/zodiac" instance=ExtResource("5_rcgbg")]
position = Vector2(844, 352)

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
